Change SUCCESS_URL to point to ff.html

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
     <!-- AUTH CORE -->
     <script>
         const API_URL = "./list.json";
-        const SUCCESS_URL = "./ff";
+        const SUCCESS_URL = "./ff.html";
 
         // SQL Injection Basic Filter
         function isClean(input) {
